--- a/MODAMSWeb/Areas/Users/Views/Stores/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Stores/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.ViewModels.Dto.dtoStores
+﻿@model MODAMS.Models.ViewModels.Dto.StoresDTO
 
 <style>
     .card.divBackground {
