--- a/MODAMSWeb/Areas/Users/Views/Transfers/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.ViewModels.Dto.dtoTransfer
+﻿@model MODAMS.Models.ViewModels.Dto.TransferDTO
 
 <div class="page-header">
     <div>
