--- a/MODAMSWeb/Areas/Users/Views/Transfers/PreviewTransfer.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/PreviewTransfer.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.ViewModels.Dto.dtoTransferPreview
+﻿@model MODAMS.Models.ViewModels.Dto.TransferPreviewDTO
 @using MODAMS.Utility
 
 <style>
