Categories Service completed

--- a/MODAMSWeb/Areas/Admin/Views/Categories/CreateSubCategory.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Categories/CreateSubCategory.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.ViewModels.Dto.dtoSubCategory
+﻿@model MODAMS.Models.ViewModels.Dto.SubCategoryDTO
 
 <!-- PAGE-HEADER -->
 <div class="page-header">
