--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetInfo.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetInfo.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Globalization
-@model MODAMS.Models.ViewModels.Dto.dtoAssetInfo
+@model MODAMS.Models.ViewModels.Dto.AssetInfoDTO
 
 @inject MODAMS.Utility.IAMSFunc _func
 
