--- a/MODAMSWeb/Areas/Admin/Views/Employees/EditEmployee.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Employees/EditEmployee.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.ViewModels.Dto.dtoEmployee
+﻿@model MODAMS.Models.ViewModels.Dto.EmployeeDTO
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 <!-- PAGE-HEADER -->
 <div class="page-header">
