--- a/MODAMSWeb/Areas/Users/Views/Stores/StoreDetails.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Stores/StoreDetails.cshtml
@@ -54,7 +54,7 @@
 <div class="row">
     <div class="col-xl col-md-12">
         <a asp-area="Users" asp-controller="Assets" asp-action="Index"
-           asp-route-id="@TempData["storeId"]" asp-route-subCategoryId="0">
+           asp-route-id="@Model.StoreId" asp-route-subCategoryId="0">
             <div class="card divShadow">
                 <div class="card-body">
                     <div class="row">
