Departments Service completed

--- a/MODAMSWeb/Areas/Admin/Views/Departments/CreateDepartment.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/CreateDepartment.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.ViewModels.Dto.dtoDepartment
+﻿@model MODAMS.Models.ViewModels.Dto.DepartmentDTO
 
 <!-- PAGE-HEADER -->
 <div class="page-header">
