--- a/MODAMSWeb/Areas/Admin/Views/Departments/DepartmentHeads.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/DepartmentHeads.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.ViewModels.Dto.dtoDepartmentHeads
+﻿@model MODAMS.Models.ViewModels.Dto.DepartmentHeadsDTO
 <style>
     .custom-row {
         margin-right: -20px;
