--- a/MODAMSWeb/Areas/Admin/Views/Departments/Index.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.ViewModels.Dto.dtoDepartments
+﻿@model MODAMS.Models.ViewModels.Dto.DepartmentsDTO
 <div class="page-header">
     <div>
         <h1 class="page-title">Departments</h1>
