--- a/MODAMSWeb/Areas/Admin/Views/Departments/OrganizationChart.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/OrganizationChart.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MODAMS.Models.ViewModels.Dto.dtoOrganizationChart>
+﻿@model List<MODAMS.Models.ViewModels.Dto.OrganizationChartDTO>
 
 <div class="page-header">
     <div>
