Verification Section Phase 1

--- a/MODAMSWeb/Views/Shared/_Layout.cshtml
+++ b/MODAMSWeb/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
 
     <!--- FONT-ICONS CSS -->
     <link href="~/assets/css/icons.css" rel="stylesheet" asp-append-version="true" />
-    <link href="~/css/customc_css_layout.css" rel="stylesheet" />
+    <link href="~/css/custom_css_layout.css" rel="stylesheet" />
 
     @* Add the Kendo UI scripts: *@
 
