Managed the ApplicationServices

--- a/MODAMSWeb/Views/Shared/Error.cshtml
+++ b/MODAMSWeb/Views/Shared/Error.cshtml
@@ -10,5 +10,5 @@
     Oops! Some error has occured, Please contact System Administrator!
 </h5>
 <div class="text-center">
-    <a class="btn btn-primary mt-5 mb-5" asp-area="" asp-page="/Index"> <i class="fa fa-long-arrow-left"></i> Back to Home </a>
+    <a class="btn btn-primary mt-5 mb-5" asp-area="Users" asp-controller="Home" asp-action="Index"> <i class="fa fa-long-arrow-left"></i> Back to Home </a>
 </div>
