--- a/MODAMSWeb/Areas/Users/Views/Verifications/PreviewSchedule.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Verifications/PreviewSchedule.cshtml
@@ -26,6 +26,11 @@
             left: 50%;
             transform: translate(-50%, -50%);
         }
+
+    .avatar-list {
+        border: 1px solid #ccc; /* Add or adjust this line as needed */
+        box-sizing: border-box; /* Ensures border and padding are included in the set height */
+    }
 </style>
 
 <div class="page-header">
@@ -117,6 +122,16 @@
                                         }
                                         <div class="row">
                                             <div class="col-md-6">
+                                                <label class="form-label">Number of Assets to Verify</label>
+                                                <input type="text" id="txtNumberOfAssetsToVerify" class="form-control" value="@Model.NumberOfAssetsToVerify" readonly />
+                                            </div>
+                                            <div class="col-md-6">
+                                                <label class="form-label">Number of Assets Verified</label>
+                                                <input type="text" class="form-control" value="@Model.VerifiedAssets" readonly />
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">
                                                 <div class="form-group mb-3 mt-2">
                                                     <label class="form-label text-black">Verification Action</label>
                                                     <div class="flex form-control p-2">
@@ -127,35 +142,31 @@
                                                 </div>
                                             </div>
                                             @{
-                                                if (Model.VerificationType == "Custom")
-                                                {
-                                                    var sCompletionEnabled = Model.VerificationStatus == "Ongoing" ? "" : "disabled";
-
-                                                    <div class="col-md-6">
-                                                        <div class="form-group mb-3 mt-2">
-                                                            <label class="form-label text-black">Complete Verification</label>
-                                                            <div class="flex form-control p-2">
-                                                                <button data-bs-toggle="dropdown" area-expanded="false" class="btn btn-info form-control @sCompletionEnabled">
-                                                                    <i class="fa fa-check-square"></i> Complete Verification
-                                                                </button>
-                                                                <div class="dropdown-menu" style="">
-                                                                    <div class="p-5">
-                                                                        <h4 class="dropdown-title bolder text-danger">Complete Schedule?</h4>
-                                                                        <p class="text-muted">You will not be able to undo this action, are you sure?</p>
-                                                                        <form asp-action="CompleteVerificationSchedule" id="frmComplete" method="post">
-                                                                            <input type="hidden" id="ScheduleId" name="ScheduleId" value="@Model.Id" />
-                                                                            <button type="submit" id="btnComplete" class="btn btn-outline-info btn-sm">
-                                                                                <i class="fa fa-check-square"></i> Complete
-                                                                            </button>
-                                                                        </form>
-                                                                    </div>
-                                                                </div>
+                                                var sCompletionEnabled = (Model.VerificationStatus == "Ongoing") && (Model.NumberOfAssetsToVerify == Model.VerifiedAssets)
+                                                ? "" : "disabled";
+                                            }
+                                            <div class="col-md-6">
+                                                <div class="form-group mb-3 mt-2">
+                                                    <label class="form-label text-black">Complete Verification</label>
+                                                    <div class="flex form-control p-2">
+                                                        <button data-bs-toggle="dropdown" area-expanded="false" class="btn btn-info form-control @sCompletionEnabled">
+                                                            <i class="fa fa-check-square"></i> Complete Verification
+                                                        </button>
+                                                        <div class="dropdown-menu" style="">
+                                                            <div class="p-5">
+                                                                <h4 class="dropdown-title bolder text-danger">Complete Schedule?</h4>
+                                                                <p class="text-muted">You will not be able to undo this action, are you sure?</p>
+                                                                <form asp-action="CompleteVerificationSchedule" id="frmComplete" method="post">
+                                                                    <input type="hidden" id="ScheduleId" name="ScheduleId" value="@Model.Id" />
+                                                                    <button type="submit" id="btnComplete" class="btn btn-outline-info btn-sm">
+                                                                        <i class="fa fa-check-square"></i> Complete
+                                                                    </button>
+                                                                </form>
                                                             </div>
                                                         </div>
                                                     </div>
-
-                                                }
-                                            }
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -378,6 +389,9 @@
                 e.preventDefault();
                 $("#frmComplete").submit();
             });
+
+            var textareaHeight = $('textarea.form-control').outerHeight(); // Includes padding and border
+            $('.avatar-list').outerHeight(textareaHeight); // Sets height including padding and border
 
         });
     </script>
